--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,9 +37,9 @@ dependencies:
   provider: ^6.1.5+1
 
   # Firebase packages (runtime dependencies)
-  firebase_core: ^4.1.1
+  firebase_core: 4.1.1
   firebase_auth: ^6.1.0
-  firebase_database: ^12.0.2
+  cloud_firestore: 6.0.2
 
 dev_dependencies:
   flutter_test:
